--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.comp1011200476114test2/com.example.comp1011200476114test2.HelloApplication
+                                com.example.comp1011200476114test2/com.example.comp1011200476114test2.Main
                             </mainClass>
                         </configuration>
                     </execution>
